
* Feature release with support for PHP 8.5, MySQL 8.4, new functionality,
  security enhancements, improvements, and bug fixes.
* Changed: Minimum system requirements increased to PHP 5.6 (PHP 8.2+
  recommended, preferably with ongoing vendor support).
* Changed: Minimum system requirements increased to MySQL 5.5 (MySQL 8.0+
  recommended, preferably with ongoing vendor support).
* Fixed: remove 'br' tags from article image markup where >1 is image is
  supplied (thanks, jools-r).
* Added: <txp:if_article_status /> tag.
* Added: Latest text translations. Thank you to all our translators.
* Added: filter articles by image.
* Added: 'exclude' attribute to <txp:images />.
* Changed: Enhancements to 'br' tag HTML5 compliance (thanks, jools-r).
* Changed: Enhancements to 'extension' and 'size' attributes of <txp:images />.
* Developer: Permitted concurrent logins. See Advanced Prefs.
* Developer: Removed duplicate pluggable_ui callback for
  article_ui›categories (thanks, jools-r).
* Developer: Added pophelp support in plugin 'lang' directory.
* Vendors: DOMPurify 3.2.6.
* Vendors: PHPMailer 6.10.0.

Changes in 4.9.0-beta.2 (14 Mar 2025)

* Added: Full article previews directly from the Write panel.
* Added: Site status values to 'process' attribute of <txp:hide />.
* Added: 'inline' value to 'format' attribute of <txp:css /> (thanks, jools-r).
* Added: 'target' attribute to <txp:popup />.
* Added: 'match', 'separator' attribute capability to <txp:if_yield />.
* Added: Ability to serve files via 'type' attribute to <txp:file_download />.
* Added: Plugin compilation directly from the Plugins panel.
* Changed: Refactored article Save panel (thanks jools-r, phiw13, and cara-tm).
* Changed: Wildcards in file/image/link category queries.
* Changed: Enhancements to RPC functionality (thanks, Melonking906).
* Changed: Multi-site scaffold optimisations.
* Changed: Pre-flight check visibility toggle.
* Changed: Articles may use external URLs directly.